--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 .App-logo {
@@ -25,4 +27,22 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.Postfeed {
+  border-color: #222;
+  border-width: 10px;
+  border-style: solid;
+  background-color: chartreuse;
+  height: 90%;
+  width: 80%;
+}
+
+.Post {
+  height: 20%;
+  width: 80%;
+  align-self: center;
+  background-color: brown;
+  border-color: black;
+  border-width: 30px;
 }
