--- a/src/App.css
+++ b/src/App.css
@@ -30,29 +30,50 @@
 }
 
 .Postfeed {
+
   border-color: #222;
-  border-width: 10px;
+  border-width: 2px;
   border-style: solid;
-  background-color: chartreuse;
+  background-color: #EBEAE7;
   height: 90%;
-  width: 80%;
+  width: 100%;
 }
 
 .Post {
-  height: 20%;
-  width: 80%;
+  height: 300px;
+  width: 35%;
   align-self: center;
-  background-color: brown;
+  background-color:#ADE1F0;
   border-color: black;
-  border-width: 30px;
+  border-width: 1px;
+  border-style: solid;
+  border-bottom: 0px;
+
 }
 
 .Icon {
-  height: 50px;
-  width: 50px;
+  height: 30px;
+  width: 30px;
 }
 
 .Photo {
-  height: 100px;
-  width: 100px;
+  height: 150px;
+  width: 150px;
+}
+
+.Usericon {
+  float: left;
+  padding-left: 50px;
+  padding-top: 20px;
+}
+
+.Username {
+  float: left;
+  padding-left: 10px;
+  padding-top: 20px;
+  font-size: 1.8em;
+}
+
+.PostPhoto {
+  padding-top: 70px;
 }
