--- a/src/App.css
+++ b/src/App.css
@@ -81,11 +81,22 @@
 }
 
 .Description {
-  padding-top: 20px;
+  padding-top: 40px;
   width: 150px;
 }
 
 .Likes {
+  float: left;
+  padding-left: 20px;
   padding-top: 10px;
   color: rgb(52, 27, 212);
+  font-size: 1.2em;
+}
+
+.LikeButton {
+  height: 20px;
+  width: 20px;
+  float: left;
+  padding-left: 200px;
+  padding-top: 10px;
 }
